# open-env-nuclei-submission

./: Dockerfile  LICENSE  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  data_cleaning_env_environment.py
