[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_cleaning_env"
version = "0.1.0"
description = "OpenEnv Data Cleaning Environment"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "pandas",
    "pydantic",
    "requests"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]